Centered main title and fixed spacing in places

--- a/css/cover.css
+++ b/css/cover.css
@@ -129,6 +129,8 @@ body {
 .mastfoot {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
+  position: fixed;
+      bottom: 0;
 }
 
 
@@ -141,10 +143,6 @@ body {
   .masthead {
     position: fixed;
     top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
